--- a/packages/front-end/index.html
+++ b/packages/front-end/index.html
@@ -11,7 +11,7 @@
         document.head.appendChild(s)
       }
     </script>
-    <title>front-end</title>
+    <title>Kekina'muek Mi'kmawi'simk</title>
   </head>
   <body>
     <div id="root"></div>
